--- a/Workbooks/RepeatWorkflow_newPanel_time_course.Rmd
+++ b/Workbooks/RepeatWorkflow_newPanel_time_course.Rmd
@@ -294,21 +294,28 @@ Predict cell annotations with CAM (Correlations assignment method)
 ```{r}
 
 reference_path2 <- "/Users/rhalenathomas/GITHUB/CelltypeR/ExampleOuts/ReferenceMatrixPanel2Timecourse.csv"
-reference_data2 <- read.csv(reference_path)
+reference_data2 <- read.csv(reference_path2)
 # the reference matrix need to be in the format cell types as rows and markers as columns
 # there is a column X with the cell type names
 df1 <- reference_data2
-rownames(df1) <- df1$X
-df1 <- df1 %>% select(-"X")
-df2 <- as.data.frame(t(df1))
-df2$X <- rownames(df2)
+rownames(df1) <- df1$X # add row names (these are the markers)
+df1 <- df1 %>% select(-"X") # remove the column with the marker names
+df2 <- as.data.frame(t(df1)) # transpose the matrix
+df2$X <- rownames(df2) # add the cell type names as a column
+
+# check to make sure the reference matrix is correct
+dim(df2)  # should be number of cell types (11) by the markers (13) with the X column of marker names = 14
+head(df2) # cell types are columns and antibody/markers are rows
 
 input <- read.csv(paste(output_path,"df2000Timecourse4.csv", sep = ""))
-input_df <- input %>% select(c("X",AB,"cell","Sample"))
+input_df <- input %>% select(c("X",AB,"Sample"))
+
+dim(input_df)
+colnames(input_df)
 
 cor <- find_correlation(test = input_df, 
                              reference = df2, 
-                             min_corr = 0.45, 
+                             min_corr = 0.2, 
                              min_diff = 0.05)
 
 # creates a dataframe with cor1 cor2 and predicted cell type label
